Fixed .css issues
Fixed scrollbars

--- a/src/app/education/education.component.css
+++ b/src/app/education/education.component.css
@@ -11,6 +11,7 @@ html{
 }
 
 .expansion_panel{
+    padding-block: 20px;
     margin: 20px;
 }
 
