--- a/src/app/home-content/home-content.component.css
+++ b/src/app/home-content/home-content.component.css
@@ -12,18 +12,18 @@ html{
 }
 
 .left{
-    width: 50%;
+    width: 100%;
     margin: 10px;
     float: left;
 }
 
 .right{
-    width: 25%;
+    width: 100%;
     margin:10px;
 }
 
 .right .info{
-    max-width: 100%;
+    max-width: 50%;
 }
 
 .right .regular{
@@ -32,13 +32,12 @@ html{
 }
 
 .below{
-    width: 25%;
+    width: 100%;
     margin:10px;
 }
 
 .below .info{
-    max-width: 800px;
-    max-width: 800px;
+    max-width: 50%;
 }
 
 .bold{
@@ -58,7 +57,7 @@ html{
 }
 
 .info{
-    max-width: 400px;
+    max-width: 100%;
 }
   
 .header_image {
@@ -87,6 +86,7 @@ ul li{
 }
 
 .content{
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
