--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -4,13 +4,6 @@
     text-transform: uppercase;
 }
 
-html,body{
-    position: fixed;
-    top:0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-}
 
 .tab_group{
     max-width: auto;
